feat: enhance product management with featured products endpoint and image upload validation